--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,20 @@ ext {
 }
 
 dependencies {
+    implementation group: 'net.serenity-bdd', name: 'serenity-core', version: '3.2.0'
+    implementation 'junit:junit:4.13.2'
+    implementation 'junit:junit:4.13.2'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+
+
+    implementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '3.2.0'
+    implementation group: 'net.serenity-bdd', name: 'serenity-cucumber', version: '3.2.0'
+
+    implementation group: 'net.serenity-bdd', name: 'serenity-screenplay', version: '3.2.0'
+    implementation group: 'net.serenity-bdd', name: 'serenity-screenplay-webdriver', version: '3.2.0'
+
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
     testImplementation "net.serenity-bdd:serenity-core:${serenityCoreVersion}",
                 "net.serenity-bdd:serenity-junit5:${serenityCoreVersion}",
                 "net.serenity-bdd:serenity-screenplay:${serenityCoreVersion}",
